--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "normalize-css": "normalize.css#^5.0.0",
     "include-media": "^1.4.9",
     "fullpage.js": "^2.9.4",
-    "select2": "^4.0.3"
+    "select2": "^4.0.3",
+    "jquery-ui": "^1.12.1"
   },
   "devDependencies": {
     "mathsass": "^0.9.5"
