--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,9 @@
     "fullpage.js": "^2.9.4",
     "select2": "^4.0.3",
     "jquery-ui": "^1.12.1",
-    "fotorama": "^4.6.4"
+    "fotorama": "^4.6.4",
+    "jquery-mousewheel": "^3.1.13",
+    "page-scroll-to-id": "^1.5.8"
   },
   "devDependencies": {
     "mathsass": "^0.9.5"
