--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-cssnano": "^2.1.2",
     "gulp-file-include": "^1.0.0",
     "gulp-html-beautify": "^1.0.1",
+    "gulp-htmlmin": "^3.0.0",
     "gulp-imagemin": "^3.1.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
