--- a/bower.json
+++ b/bower.json
@@ -31,7 +31,8 @@
     "jquery-ui": "^1.12.1",
     "fotorama": "^4.6.4",
     "jquery-mousewheel": "^3.1.13",
-    "page-scroll-to-id": "^1.5.8"
+    "page-scroll-to-id": "^1.5.8",
+    "toastr": "^2.1.3"
   },
   "devDependencies": {
     "mathsass": "^0.9.5"
