--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,7 @@
     "jquery-ui": "^1.12.1",
     "fotorama": "^4.6.4",
     "jquery-mousewheel": "^3.1.13",
+    "magnific-popup": "^1.1.0",
     "page-scroll-to-id": "^1.5.8",
     "toastr": "^2.1.3"
   },
